syntax = "proto3";
package proto;
option go_package = "./proto";

enum ErrorCode { OK = 0; }

message Error { ErrorCode code = 1; }

message Empty { uint32 helper = 1; }

service Plugin {
  rpc Enable(Empty) returns (Error);
  rpc Disable(Empty) returns (Error);
}

message EvalRequest {
  string str = 1; // eval str
}

message EvalResponse {
  string ret = 1; // return value
}

service PluginHelper { rpc Eval(EvalRequest) returns (EvalResponse); }
